Adds CoreUtils.parseCommand for better handling of command line arguments in configuration files; gets SIBEA working